user input function

--- a/test_hiss.ipynb
+++ b/test_hiss.ipynb
@@ -32,22 +32,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "753521d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def calculator(salary, apm_price, rent, fee, threshold):\n",
-    "    rent_price = apm_price * (rent/100)\n",
+    "    rent_price_month = (apm_price * (rent/100)) / 12 # 1000000 * 0.035 / 12 = 2900\n",
     "    decimal_threshold = threshold / 100 # 0.5\n",
-    "    if salary - (rent_price + fee) <= salary * decimal_threshold:\n",
-    "        return True\n",
-    "    else:\n",
+    "    # 30000 - 2900 + 5000(7900) = om 22100 <= 15000\n",
+    "    if salary - (rent_price_month + fee) <= salary * decimal_threshold:\n",
     "        return False\n",
+    "    else:\n",
+    "        return True\n",
     "\n",
     "\n",
-    "calculator(30000, 3000000, 3.5, 5000, 50)"
+    "calculator(30000, 1000000, 3.5, 5000, 50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1007976e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -57,8 +77,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
